@@ -1,8 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.207 2005/12/05 01:35:14 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.208 2005/12/11 21:03:38 agaffney Exp $
 
 *GLI-gtkfe-0.3 (27 Oct 2005)
+
+  11 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
+  change call to .get_active_text()
+  set arch properly in CF
 
   4 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
   added StartupServices screen
